# django-license-wall

./: README.md  pyproject.toml
django_license_wall/: admin.py  apps.py  auth.py  forms.py  license.py  models.py
django_license_wall/locale/ru_RU/LC_MESSAGES/: django.po
django_license_wall/templates/django_license_wall/: login.html
features/: license.feature
features/steps/: license.py
test_env/: django_license_wall  manage.py
test_env/django_license_wall_test/: asgi.py  settings.py  urls.py  wsgi.py
